<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">USC iCampus Mobile</string>
	<string name="app_name_short">iCampus</string>

	<!--Colin Laptop -->
	<!--<string name="maps_api_key">0zrEEB_wMw-JKMJjc7fjONxyuzlyY7e-aq_aG8Q</string> -->
	<!--Ling Dell Laptop -->
	<!-- <string name="maps_api_key">0bHK-hMA1Uy69tFDrQ_eQ-ISYRzhe0xtIQlTBAw</string> -->
	<!--Hien Desktop -->
	<!-- <string name="maps_api_key">0QyvEJhHTXQC-UNAs_a38sLbupp-I1TykfAifng</string> -->

	<!--Hien Laptop Win7 -->
	<!-- <string name="maps_api_key">0jbMsykpKaNKwIrgTVvr5YxL8qK2MIH8cepvrdA</string> -->

	<!--Hien Laptop Mac -->
	<string name="maps_api_key">0QyvEJhHTXQBx0OzB0Aw8br6C-hoxMwmImGS1xQ</string>
	<!--Ling PHE desktop -->
	<!-- <string name="maps_api_key">0bHK-hMA1Uy4zPRhpLJr7ymBJFW_Q00Ii5LuK0w</string> -->
	<!--Ling RTH desktop -->
	<!-- <string name="maps_api_key">0bHK-hMA1Uy7MBHeWzUGN0cRt7_scOUZAqbJ1og</string> -->
	<!--Nick desktop -->
	<!-- <string name="maps_api_key">0cwlOlHkMIOKn1dmazq5ptY7utwtgDpIt9UtyoA</string> -->

	<string name="zoomToUSCOnClick">zoomToUSC</string>
	<string name="showLayerListOnClick">showLayerList</string>
	<string name="showFacebookOnClick">showFacebook</string>
	<string name="showFoodTabsOnClick">showFoodTabs</string>
	<string name="startMapActivityOnClick">startMapActivity</string>
	<string name="startWebViewActivityOnClick">startWebViewActivity</string>
	<string name="startBrowseMapActivityOnClick">startBrowseMapActivity</string>
	<string name="startBrowseVendorActivityOnClick">startBrowseVendorActivity</string>
	<string name="center_usc">Center on USC</string>
	<string name="my_location">My Location</string>
	<string name="friends">Friends</string>
	<string name="camera">Camera</string>
	<string name="layers">Layers</string>
	<string name="settings">Settings</string>
	<string name="search">Search</string>
	<string name="event">Event</string>
	<string name="exit">Exit</string>
	<string name="social">Social</string>
	<string name="about">About</string>
	<string name="hello">Hello</string>

	<string name="settings_title">Settings</string>
	<string name="event_title">USC Events</string>
	<string name="social_title">Social media</string>
	<string name="about_title">About</string>
	<string name="food_title">Foods</string>

	<string name="locationSelectionFieldOnClick">locationSelectionFieldOnClick</string>
	<string name="locationSelectionOkOnClick">onOkClick</string>
	<string name="locationSelectionCancelOnClick">onCancelClick</string>
	<string name="cameraTurnedOnOnClick">cameraTurnedOn</string>
	<string name="discardCameraOnClick">discardCamera</string>
	
	
	<string name="useMockLocation">false</string>
	<string name="mockLocationLat">34.0225096780457</string>
	<string name="mockLocationLon">-118.284359926051</string>
	<string name="useWifiLocation">true</string>
	<string name="minDistLocationUpdate">5</string>
	<string name="minTimeLocationUpdates">15</string>

	<!--FaceBook Integration -->
	<string name="hideFriends">Hide Friends</string>
	<!-- <string name="upload">Upload Photo</string> -->
	<string name="showFriends">Show Friends</string>
	<!-- <string name="delete">Delete Post</string> -->
	<!-- <string name="post">Post</string> -->

	<string name="request">Request!</string>
	<string name="upload">Upload Photo</string>
	<string name="post">+</string>
	<string name="delete">Delete Post</string>
	<string name="facebook_app_id">208635195824066</string>
	<string name="layers2">Layers</string>
	<string name="account">Account</string>
	<string name="title_height">25dip</string>

	<string name="dialog_multi_choice">Layers</string>
	<string name="dialog_multi_choice_ok">OK</string>
	<string name="dialog_multi_choice_cancel">Cancel</string>

	<string name="remote_service_started">Remote service has started</string>
	<string name="remote_service_stopped">Remote service has stopped</string>
	<string name="remote_service_label">Sample Messenger Service</string>
	<string name="remote_service_connected">Connected to remote service</string>
	<string name="remote_service_disconnected">Disconnected from remote service</string>

	<string name="start">Start service</string>
	<string name="stop">Stop service</string>

	<string name="bind">Bind service</string>
	<string name="unbind">Unbind service</string>

	<string name="callback">Callback</string>
	
<!-- 	<string name="WebServiceURL">http://icampus.usc.edu</string> -->


	<string name="progressbar_1_plus">+</string>
	<string name="progressbar_1_minus">-</string>
	<string name="progressbar_1_default_progress">Default progress:</string>
	<string name="progressbar_1_secondary_progress">Secondary progress:</string>
	<string name="progressbar_3_progress">Show Progress</string>
	<string name="progressbar_3_indeterminate">Show Indeterminate</string>
	<string name="progressbar_3_indeterminate_no_title">Show Indeterminate No Title</string>
	<string name="progressbar_4_toggle">Toggle Indeterminate</string>
	
	

</resources>
